--- a/kitty.conf
+++ b/kitty.conf
@@ -8,7 +8,7 @@
 # bold_font Operator Mono Thick
 # bold_italic_font Operator Mono Medium
 # font_family      Input Mono
-font_family      JetBrainsMono
+font_family      JetBrainsMono Nerd Font
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
@@ -169,6 +169,7 @@ window_margin_width 15
 
 map ctrl+shift+left resize_window narrower
 map ctrl+shift+right resize_window wider
+# map ctrl+shift+t new_tab_with_cwd
 # map ctrl+f launch --type=overlay --stdin-source=@screen_scrollback /usr/bin/fzf --no-sort --no-mouse --exact -i
 
 # Symbol mapping (special font for specified unicode code points). Map the
