format and add new tab shortcut

--- a/kitty.conf
+++ b/kitty.conf
@@ -8,13 +8,13 @@
 # bold_font Operator Mono Thick
 # bold_italic_font Operator Mono Medium
 # font_family      Input Mono
-font_family      JetBrainsMono Nerd Font
-italic_font      auto
-bold_font        auto
+font_family JetBrainsMono
+italic_font auto
+bold_font auto
 bold_italic_font auto
 
 # Font size (in pts)
-font_size        12.0
+font_size 12.0
 background_opacity 0.85
 
 # The foreground color
@@ -38,7 +38,7 @@ cursor_shape block
 
 # The interval (in seconds) at which to blink the cursor. Set to zero to
 # disable blinking.
-cursor_blink_interval     0.5
+cursor_blink_interval 0.5
 
 # Stop blinking cursor after the specified number of seconds of keyboard inactivity. Set to
 # zero or a negative number to never stop blinking.
@@ -61,7 +61,8 @@ click_interval 0.5
 # Characters considered part of a word when double clicking. In addition to these characters
 # any character that is marked as an alpha-numeric character in the unicode
 # database will be matched.
-select_by_word_characters :@-./_~?&=%+#
+select_by_word_characters :@-./_~? &
+=%+#
 
 # Hide mouse cursor after the specified number of seconds of the mouse not being used. Set to
 # zero or a negative number to disable mouse cursor hiding.
@@ -74,15 +75,15 @@ enabled_layouts tall
 # If enabled, the window size will be remembered so that new instances of kitty will have the same
 # size as the previous instance. If disabled, the window will initially have size configured
 # by initial_window_width/height, in pixels.
-remember_window_size   no
-initial_window_width   1080
-initial_window_height  720
+remember_window_size no
+initial_window_width 1080
+initial_window_height 720
 
 # Delay (in milliseconds) between screen updates. Decreasing it, increases fps
 # at the cost of more CPU usage. The default value yields ~100fps which is more
 # that sufficient for most uses.
 # repaint_delay    10
-repaint_delay    10
+repaint_delay 10
 
 # Delay (in milliseconds) before input from the program running in the terminal
 # is processed. Note that decreasing it will increase responsiveness, but also
@@ -124,7 +125,6 @@ window_margin_width 15
 # active_tab_background #eee
 # inactive_tab_foreground #444
 # inactive_tab_background #999
-
 
 # The 16 terminal colors. There are 8 basic colors, each color has a dull and
 # bright version.
@@ -169,7 +169,7 @@ window_margin_width 15
 
 map ctrl+shift+left resize_window narrower
 map ctrl+shift+right resize_window wider
-# map ctrl+shift+t new_tab_with_cwd
+map ctrl+shift+p new_tab_with_cwd
 # map ctrl+f launch --type=overlay --stdin-source=@screen_scrollback /usr/bin/fzf --no-sort --no-mouse --exact -i
 
 # Symbol mapping (special font for specified unicode code points). Map the
@@ -191,7 +191,6 @@ map ctrl+shift+right resize_window wider
 # the default background color and finally you can use an arbitrary color, such
 # as #12af59 or "red".
 allow_remote_control yes
-
 
 # BEGIN_KITTY_THEME
 # Tokyo Night
