remap new kitty window shortcut

--- a/kitty.conf
+++ b/kitty.conf
@@ -170,6 +170,7 @@ window_margin_width 15
 map ctrl+shift+left resize_window narrower
 map ctrl+shift+right resize_window wider
 map ctrl+shift+p new_tab_with_cwd
+map ctrl+shift+enter new_window_with_cwd
 # map ctrl+f launch --type=overlay --stdin-source=@screen_scrollback /usr/bin/fzf --no-sort --no-mouse --exact -i
 
 # Symbol mapping (special font for specified unicode code points). Map the
