--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,7 +26,7 @@ bind C-q kill-session
 unbind q
 bind q kill-window
 #################################################
-bind e run "/home/khalil/.local/bin/vim-edit"
+bind e run "/home/khalil/.local/bin/vim_edit"
 #################################################
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
