--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -95,7 +95,7 @@
 		"format-disabled": " Disabled",
 		"format-wifi": " {bandwidthDownBits:>} 󰶡 {bandwidthUpBits:>} 󰶣",
 		"tooltip-format-wifi": "{essid}",
-		"format-ethernet": "󰈀 {bandwidthDownBits:>} 󰶡 {bandwidthUpBits:>} 󰶣",
+		"format-ethernet": "{bandwidthDownBits:>} 󰶡 {bandwidthUpBits:>} 󰶣",
 		"tooltip-format-ethernet": "{ifname}: {ipaddr}/{cidr}",
 		"format-disconnected": " Disconnected",
 		"on-click": "",
@@ -103,7 +103,7 @@
 	},
 	"cpu": {
 		"interval": 5,
-		"format": "  {usage:>3}%",
+		"format": "CPU : {usage:>3}%",
 		"states": {
 			"warning": 70,
 			"critical": 90
@@ -112,7 +112,7 @@
 	},
 	"memory": {
 		"interval": 5,
-		"format": "  {:>3}%",
+		"format": "RAM : {:>3}%",
 		// "on-click": "footclient -T waybar_htop -e htop",
 		"on-click": "alacritty -T btm_popup -e btm",
 		"states": {
