--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,8 +20,8 @@ bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
-bind -n M-H previous-window
-bind -n M-L next-window
+bind -n M-h previous-window
+bind -n M-l next-window
 bind C-q kill-session
 unbind q
 bind q kill-window
