add git yoloooo

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -21,3 +21,5 @@
 
 [diff]
     colorMoved = default
+[alias]
+    yolo = !git add -A && git commit -m \"$(curl --silent --fail https://whatthecommit.com/index.txt)\"
