add readme roadmap and remove unused config

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -62,7 +62,7 @@
 
 	"modules-right": [
 		"custom/keyboard-layout",
-		"idle_inhibitor",
+		// "idle_inhibitor",
 		"network",
 		"cpu",
 		"memory",
