--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -42,7 +42,7 @@
 		"tooltip": false
 	},
 	"clock": {
-		"format": " 󰅐  {:%H:%M  - %A %d/%m/%y}",
+		"format": " 󰅐  {:%H:%M  - %A - %d/%m}",
 		"tooltip-format": " {:%A %m/%d}\n\n<tt><big>{calendar}</big></tt>",
 		"calendar": {
 			"on-scroll": 1,
