--- a/greetd/config.toml
+++ b/greetd/config.toml
@@ -2,5 +2,5 @@
 vt = 1
 
 [default_session]
-command = "tuigreet --time --remember --sessions /etc/greetd/sessions:/usr/share/wayland-sessions"
+command = "tuigreet --time --remember-session --remember --sessions /etc/greetd/sessions:/usr/share/wayland-sessions "
 user = "greeter"
