fix voluume icone

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -3,7 +3,7 @@
 	"position": "top", // Waybar position (top|bottom|left|right)
 	// "height": 30, // Auto-height is used when commented
 	// "width": 1280, // Full screen width when commented
-  "margin": 10,
+	"margin": 10,
 	"spacing": 20, // Gaps between modules (in px)
 	// See `man waybar` for more configuration options
 	"modules-left": ["sway/workspaces", "sway/window"],
@@ -121,14 +121,8 @@
 		}
 	},
 	"pulseaudio#out": {
-		"format": "{volume}% {icon}",
+		"format": "{volume}%  🎧",
 		"format-muted": " ",
-		"format-icons": {
-			"headphones": "",
-			"handsfree": "",
-			"headset": "",
-			"default": ["", "", " "]
-		},
 		"on-scroll-up": "amixer -q -D pipewire sset Master 5%+",
 		"on-scroll-down": "amixer -q -D pipewire sset Master 5%-",
 		"on-click": "pavucontrol"
