--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,7 +12,6 @@ set -g renumber-windows on
 set -g set-clipboard on
 set-window-option -g mode-keys vi
 set-option -g detach-on-destroy on
-set-option -g status-position top
 # change leader key
 set -g prefix C-a
 
@@ -26,11 +25,14 @@ bind C-q kill-session
 unbind q
 bind q kill-window
 #################################################
-bind e run "/home/khalil/.local/bin/vim_edit"
+bind e run "~/.config/scripts/vim_edit.sh"
 #################################################
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'jimeh/tmuxifier'
+set -g @plugin 'wfxr/tmux-fzf-url' # prefix + u
+set -g @plugin 'fcsonline/tmux-thumbs' # prefix + space
+run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
+set -g @thumbs-upcase-command 'tmux set-buffer -- {} && tmux paste-buffer '
 #################################################
 set -g @plugin 'omerxx/tmux-floax'
 set -g @floax-bind '-n M-p'
@@ -40,18 +42,40 @@ set -g @floax-change-path 'false'
 set -g @floax-text-color 'white'
 set -g @floax-border-color 'blue'
 #################################################
-set -g @plugin 'catppuccin/tmux'
-set -g @catppuccin_status_background "none"
-set -g @catppuccin_flavor "mocha"
-# rounded conflict with no bg
-# set -g @catppuccin_window_status_style "rounded"
-set -g status-right-length 100
-set -g status-left-length 100
-set -g status-left ""
-# set -g status-right ""
-set -g status-right "#{E:@catppuccin_status_session}"
-set -g @catppuccin_window_current_text " #W"
-set -g @catppuccin_window_text " #W"
+####### STATUS BAR SETTINGS #######
+####### VARIABLES (Colors) #######
+set -g @text_color "#000000"        # near-white foreground
+set -g @inactive_color "#5a6374"    # soft gray/blue
+set -g @active_color "#7e9cd8"      # soft blue active
+set -g @session_color "#957fb8"     # muted violet session
+set -g @prefix_color "#c34043"      # muted red prefix
+set -g @left_bubble_color "#76946a" # soft green/teal left bubble
+set -g status-position top
 set -g status-justify "absolute-centre"
+set -g status 2
+set -g status-style "bg=default,fg=default"
+set -g status-format[1] " "
+set -g window-status-style "bg=default,fg=default"
+set -g window-status-current-style "bg=default,fg=default"
+####### INACTIVE WINDOWS #######
+set -g window-status-format "\
+#[fg=#{@inactive_color},bg=default]\
+#[fg=#{@text_color},bg=#{@inactive_color}] #W \
+#[fg=#{@inactive_color},bg=default]"
+####### ACTIVE WINDOW #######
+set -g window-status-current-format "\
+#[fg=#{@active_color},bg=default]\
+#[fg=#{@text_color},bg=#{@active_color},bold] #W \
+#[fg=#{@active_color},bg=default]"
+####### SESSION BUBBLE (RIGHT SIDE) #######
+# Changes color dynamically when prefix key is pressed
+set -g status-right "\
+#[fg=#{?client_prefix,#{@prefix_color},#{@session_color}},bg=default]\
+#[fg=#{@text_color},bg=#{?client_prefix,#{@prefix_color},#{@session_color}}]  #S \
+#[fg=#{?client_prefix,#{@prefix_color},#{@session_color}},bg=default]  "
+set -g status-left "\
+#[fg=#{@left_bubble_color},bg=default]\
+#[fg=#{@text_color},bg=#{@left_bubble_color}] 󰓩 #(tmux list-sessions | wc -l | tr -d '[:space:]') \
+#[fg=#{@left_bubble_color},bg=default]"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
