--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,5 @@ bin/.local/bin/work_setup  filter=crypt diff=crypt merge=crypt
 ssh/.ssh/*  filter=crypt diff=crypt merge=crypt
 leetcode/.leetcode/leetcode.toml filter=crypt diff=crypt merge=crypt
 scripts/dot-config/scripts/work_setup.sh  filter=crypt diff=crypt merge=crypt
+qutebrowser/dot-config/qutebrowser/quickmarks filter=crypt diff=crypt merge=crypt
+qutebrowser/dot-config/qutebrowser/bookmarks/* filter=crypt diff=crypt merge=crypt
