--- a/tmux/dot-tmuxp/dots.yaml
+++ b/tmux/dot-tmuxp/dots.yaml
@@ -1,10 +1,8 @@
 session_name: Dotfiles
 suppress_history: true
-# start_directory: ${HOME}/cyborgV2/
+start_directory: ${HOME}/dotfiles/
 windows:
-  - window_name: "cyborgV2"
-    start_directory: ${HOME}/cyborgV2/
+  - window_name: "dotfiles"
     shell_command_before: nvim
     focus: true
   - window_name: "shell"
-    start_directory: ${HOME}/cyborgV2/
