--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@ secrets/*  filter=crypt diff=crypt merge=crypt
 zsh/.zsh_history  filter=crypt diff=crypt merge=crypt
 bin/.local/bin/work_setup  filter=crypt diff=crypt merge=crypt
 ssh/.ssh/*  filter=crypt diff=crypt merge=crypt
+ssh/dot-ssh/*  filter=crypt diff=crypt merge=crypt
 leetcode/.leetcode/leetcode.toml filter=crypt diff=crypt merge=crypt
 scripts/dot-config/scripts/work_setup.sh  filter=crypt diff=crypt merge=crypt
 qutebrowser/dot-config/qutebrowser/quickmarks filter=crypt diff=crypt merge=crypt
