--- a/sway/dot-config/sway/config.d/autostart_applications.conf
+++ b/sway/dot-config/sway/config.d/autostart_applications.conf
@@ -9,27 +9,18 @@ exec hash dbus-update-activation-environment 2>/dev/null && \
      dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP
 
 # Inform swayidle/systemd that the system is idle (starts idle timers)
-exec swayidle idlehint 1
-
+# exec swayidle idlehint 1
 exec_always swayidle -w \
     timeout 5400 'systemctl poweroff' \
     before-sleep   '~/.config/sway/scripts/swaylock.sh'
 
 # night light 
-exec_always ~/.config/sway/scripts/sunset.sh
-
-# bluetooth auto-connect speaker
-exec_always "echo 'connect 10:94:97:36:C7:15' | bluetoothctl"
-
+exec sunsetr
 # Desktop notifications
 exec mako
-
 # cliphist
 exec wl-paste --type text --watch cliphist store
 exec wl-paste --type image --watch cliphist store
-     
 # Network Applet
 exec nm-applet --indicator
 
-# apps autostart
-exec_always ~/.config/sway/scripts/autostart.sh
