fix scripts and keybinds

--- a/sway/dot-config/sway/config.d/autostart_applications.conf
+++ b/sway/dot-config/sway/config.d/autostart_applications.conf
@@ -12,7 +12,7 @@ exec hash dbus-update-activation-environment 2>/dev/null && \
 # exec swayidle idlehint 1
 exec_always swayidle -w \
     timeout 5400 'systemctl poweroff' \
-    before-sleep   '~/.config/sway/scripts/swaylock.sh'
+    before-sleep   '~/.config/scripts/swaylock.sh'
 
 # night light 
 exec sunsetr
