--- a/sway/dot-config/sway/config.d/default_keybinds.conf
+++ b/sway/dot-config/sway/config.d/default_keybinds.conf
@@ -87,24 +87,20 @@ bindcode {
 #
     # Set how the current window will be split
     # Split the window vertically
-    bindsym $mod+v splitv
+    # bindsym $mod+v splitv
     # Split the window horizontally
-    bindsym $mod+b splith
+    # bindsym $mod+b splith
 
     # Switch the current container between different layout styles
-    bindsym $mod+s layout stacking
-    bindsym $mod+w layout tabbed
-    bindsym $mod+e layout toggle split
-
+    # bindsym $mod+s layout stacking
+    bindsym $mod+g layout tabbed
+    bindsym $mod+t layout toggle split
     # Make the current focus fullscreen
-    bindsym $mod+f fullscreen
-
+    bindsym $mod+Shift+f fullscreen
+    # Swap focus between the tiling area and the floating area
+    bindsym $mod+f focus mode_toggle
     # Toggle between tiling and floating mode
     bindsym $mod+Shift+space floating toggle
-
-    # Swap focus between the tiling area and the floating area
-    bindsym $mod+space focus mode_toggle
-
     # Move focus to the parent container
     # bindsym $mod+a focus parent
 
@@ -124,20 +120,20 @@ bindcode {
 #
 # Resizing containers:
 #
-bindsym $mod+Shift+f resize set width 2100 height 1200
-bindsym {
-    # Resize with arrow keys
-    $mod+ctrl+Right resize shrink width 10 px
-    $mod+ctrl+Up resize grow height 10 px
-    $mod+ctrl+Down resize shrink height 10 px
-    $mod+ctrl+Left resize grow width 10 px
-    # Resize with Vim keys
-    $mod+ctrl+$right resize shrink width 10 px
-    $mod+ctrl+$up resize grow height 10 px
-    $mod+ctrl+$down resize shrink height 10 px
-    $mod+ctrl+$left resize grow width 10 px
-}
-
+# bindsym $mod+Shift+f resize set width 2100 height 1200
+# bindsym {
+#     # Resize with arrow keys
+#     $mod+ctrl+Right resize shrink width 10 px
+#     $mod+ctrl+Up resize grow height 10 px
+#     $mod+ctrl+Down resize shrink height 10 px
+#     $mod+ctrl+Left resize grow width 10 px
+#     # Resize with Vim keys
+#     $mod+ctrl+$right resize shrink width 10 px
+#     $mod+ctrl+$up resize grow height 10 px
+#     $mod+ctrl+$down resize shrink height 10 px
+#     $mod+ctrl+$left resize grow width 10 px
+# }
+#
 # Resize floating windows with mouse scroll:
 bindsym --whole-window --border {
     # Resize vertically
