--- a/sway/dot-config/sway/config.d/keybinds.conf
+++ b/sway/dot-config/sway/config.d/keybinds.conf
@@ -5,14 +5,13 @@ set $mod Mod4
 # Set default terminal emulator
 set $term alacritty
 # Launch the terminal
-bindsym $mod+Return exec $term
-bindsym $mod+t exec $term
+bindsym $mod+space exec $term
 
 # Set default browser
 set $browser brave --ozone-platform=wayland --ozone-platform-hint=wayland 
 
 # Launch the browser
-bindsym $mod+o exec $browser
+bindsym $mod+b exec $browser
 
 # Application launcher
 set $launcher fuzzel
@@ -22,19 +21,17 @@ bindsym $mod+d exec $launcher
 # Power Menu
 set $powermenu "wlogout -b 4 -T 400 -B 400"
 # Open the power menu
-bindsym $mod+Shift+e exec $powermenu
+bindsym $mod+p exec $powermenu
 
 # Lock screen
 bindsym $mod+f1 exec gtklock
 
-# Activities
-bindsym $mod+p exec ~/.config/sway/scripts/window_switcher.sh
-
 # Launch the file explorer
-bindsym $mod+n exec thunar
-bindsym $mod+y exec alacritty -e yazi
-bindsym $mod+Shift+b exec alacritty -e bluetui
-bindsym $mod+Shift+w exec alacritty -e impala
+bindsym $mod+shift+e exec thunar
+set $floatty ~/.config/scripts/classy_alacritty.sh floatty
+bindsym $mod+e exec $floatty yazi
+bindsym $mod+Shift+b exec $floatty bluetui
+bindsym $mod+Shift+w exec $floatty impala
 
 # Launch the clipboard manager
 bindsym $mod+Ctrl+v exec cliphist list | fuzzel -d -w 90 -l 30 -p "Select an entry to copy it to your clipboard buffer:" | cliphist decode | wl-copy
@@ -42,15 +39,15 @@ bindsym $mod+Ctrl+v exec cliphist list | fuzzel -d -w 90 -l 30 -p "Select an ent
 bindsym $mod+Ctrl+x exec cliphist list | fuzzel -d -w 90 -l 30 -t cc9393ff -S cc9393ff -p "Select an entry to delete it from cliphist:" | cliphist delete
 # Note: you can clear all cliphist entries by running `cliphist wipe`
 # zoom
-bindsym $mod+z exec  ~/.config/sway/scripts/zoom.sh
+bindsym $mod+z exec  ~/.config/scripts/sway_zoom.sh
 # Focus timer 
-bindsym $mod+Shift+t exec ~/.config/sway/scripts/focus_timer.sh
+bindsym $mod+Shift+t exec ~/.config/scripts/focus_timer.sh
 # pkill
-bindsym $mod+Shift+d exec ~/.config/sway/scripts/pkill.sh
+bindsym $mod+Shift+d exec ~/.config/scripts/pkill.sh
 # Android emulator
-bindsym $mod+Shift+a exec ~/.config/sway/scripts/emulator.sh
+bindsym $mod+Shift+a exec ~/.config/scripts/emulator.sh
 # keyboard layout
-bindsym $mod+x exec ~/.config/sway/scripts/layout.sh
+bindsym $mod+x exec ~/.config/scripts/layout.sh
 
 # ------------------
 # Audio controls
@@ -80,23 +77,9 @@ bindsym {
     XF86MonBrightnessUp exec brightnessctl -c backlight set +5%
     XF86MonBrightnessDown exec brightnessctl -c backlight set 5%-
 }
-set {
-  $audio-switcher "Select Audio : [I]nput or [O]utput"
-  $audio-switch-cmd ~/.config/sway/scripts/audio_picker.sh
-}
-
-mode $audio-switcher {
-  bindsym --to-code {
-    i exec $audio-switch-cmd source , mode "default"
-    o exec $audio-switch-cmd sink , mode "default"
-
-    Return mode "default"
-    Escape mode "default"
-    $mod+x mode "default"
-
-  }
-}
-bindsym --to-code $mod+Shift+o mode $audio-switcher
+set $audio-switch-cmd ~/.config/scripts/audio_picker.sh
+bindsym $mod+i exec ~/.config/scripts/audio_picker.sh source
+bindsym $mod+o exec ~/.config/scripts/audio_picker.sh sink
 # ------------------
 # notification mode
 # ------------------
@@ -116,7 +99,7 @@ mode $notification {
     $mod+x mode "default"
   }
 }
-bindsym --to-code $mod+c mode $notification
+bindsym --to-code $mod+n mode $notification
 
 # ------------------
 ### Screenshot mode:
@@ -124,7 +107,7 @@ bindsym --to-code $mod+c mode $notification
 set {
   $screenshot "Screenshot: [D]isplay or [W]indow or [R]egion"
 
-  $screenshot-cmd ~/.config/sway/scripts/screenshot.sh
+  $screenshot-cmd ~/.config/scripts/screenshot.sh
 }
 
 mode $screenshot {
