--- a/sway/dot-config/sway/config.d/application_rules.conf
+++ b/sway/dot-config/sway/config.d/application_rules.conf
@@ -1,4 +1,5 @@
-# Custom windowing rules
+for_window [shell="xdg_shell"] title_format "%title (%app_id)"
+for_window [shell="x_wayland"] title_format "%class - %title"
 for_window [class="Yad" instance="yad"] floating enable
 for_window [app_id="yad"] floating enable
 for_window [app_id="blueman-manager"] floating enable,  resize set width 40 ppt height 30 ppt
@@ -20,8 +21,8 @@ for_window [title="waybar_nmtui"] floating enable
 for_window [title="Save File"] floating enable
 for_window [app_id="firefox" title="Firefox — Sharing Indicator"] kill
 for_window [class="Spotify"] floating enable, resize set width 70 ppt height 70 ppt
-# for_window [app_id="Slack"] floating enable, resize set width 70 ppt height 70 ppt
-# Inhibit idle
 for_window [app_id="firefox"] inhibit_idle fullscreen
 for_window [app_id="Chromium"] inhibit_idle fullscreen
 for_window [class="feh"] floating enable
+for_window [app_id="imv"] floating enable, border pixel 4, sticky enable
+for_window [app_id="floatty"] floating enable, resize set width 70 ppt height 70 ppt
