--- a/sway/dot-config/sway/config.d/looknfeel.conf
+++ b/sway/dot-config/sway/config.d/looknfeel.conf
@@ -25,10 +25,7 @@ smart_borders on
 output * bg ~/.config/assets/dominik-mayer-4.jpg fill
 # exec ~/.config/sway/scripts/swaybg.sh
 
-# Title format for windows
-for_window [shell="xdg_shell"] title_format "%title (%app_id)"
-for_window [shell="x_wayland"] title_format "%class - %title"
-
+floating_minimum_size 800 x 800
 # Catppuccin Mocha color definitions:
 # Base:      #1E1E2E
 # Mantle:    #181825
