fix screenshot and zoom

--- a/sway/dot-config/sway/config.d/application_rules.conf
+++ b/sway/dot-config/sway/config.d/application_rules.conf
@@ -26,3 +26,4 @@ for_window [app_id="Chromium"] inhibit_idle fullscreen
 for_window [class="feh"] floating enable
 for_window [app_id="imv"] floating enable, border pixel 4, sticky enable
 for_window [app_id="floatty"] floating enable, resize set width 70 ppt height 70 ppt
+for_window [app_id="localsend"] floating enable
