change idle timeout and add rule for screenshare

--- a/sway/dot-config/sway/config.d/autostart_applications.conf
+++ b/sway/dot-config/sway/config.d/autostart_applications.conf
@@ -9,10 +9,9 @@ exec hash dbus-update-activation-environment 2>/dev/null && \
      dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP
 
 # Inform swayidle/systemd that the system is idle (starts idle timers)
-# exec swayidle idlehint 1
 exec_always swayidle -w \
-    timeout 5400 'systemctl poweroff' \
-    before-sleep   '~/.config/scripts/swaylock.sh'
+    timeout 60 '~/.config/scripts/swaylock.sh' \
+    timeout 1200 'systemctl poweroff' \
 
 # night light 
 exec sunsetr
