--- a/sway/dot-config/sway/config.d/application_rules.conf
+++ b/sway/dot-config/sway/config.d/application_rules.conf
@@ -27,3 +27,5 @@ for_window [class="feh"] floating enable
 for_window [app_id="imv"] floating enable, border pixel 4, sticky enable
 for_window [app_id="floatty"] floating enable, resize set width 70 ppt height 70 ppt
 for_window [app_id="localsend"] floating enable
+for_window [ title="sharing your screen"] move scratchpad
+# for_window [floating="enabled"] border pixel 20,resize set width 80 ppt height 80 ppt
