add just lsp and fix vim_edit

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -25,7 +25,7 @@ bind C-q kill-session
 unbind q
 bind q kill-window
 #################################################
-bind e run "~/.config/scripts/vim_edit.sh"
+bind e run "sh -c ~/.config/scripts/vim_edit.sh"
 #################################################
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
