--- a/sway/dot-config/sway/config.d/auto-start.conf
+++ b/sway/dot-config/sway/config.d/auto-start.conf
@@ -24,4 +24,5 @@ exec wl-paste --type image --watch cliphist store
 exec nm-applet --indicator
 exec ~/.config/scripts/load_sessions.sh
 exec ~/.config/scripts/blue-speaker.sh
+exec ~/.config/scripts/swaybg.sh
 
