--- a/sway/dot-config/sway/config.d/looknfeel.conf
+++ b/sway/dot-config/sway/config.d/looknfeel.conf
@@ -22,7 +22,7 @@ smart_borders on
 
 # Set wallpaper:
 # Wallpaper
-output * bg ~/.config/assets/dominik-mayer-4.jpg fill
+# output * bg ~/.config/assets/dominik-mayer-4.jpg fill
 # exec ~/.config/sway/scripts/swaybg.sh
 
 floating_minimum_size 800 x 800
