--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -32,7 +32,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'wfxr/tmux-fzf-url' # prefix + u
 set -g @plugin 'fcsonline/tmux-thumbs' # prefix + space
 run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
-set -g @thumbs-upcase-command 'tmux set-buffer -- {} && tmux paste-buffer '
+set -g @thumbs-command ' wl-copy {} '
 #################################################
 set -g @plugin 'omerxx/tmux-floax'
 set -g @floax-bind '-n M-p'
