add wellbeing and fix idle timers

--- a/sway/dot-config/sway/config.d/keybinds.conf
+++ b/sway/dot-config/sway/config.d/keybinds.conf
@@ -26,9 +26,12 @@ bindsym $mod+p exec $powermenu
 # Launch the file explorer
 bindsym $mod+shift+e exec thunar
 set $floatty ~/.config/scripts/classy_alacritty.sh floatty
+set $timer_cmd alacritty -o window.padding.x=120 -o window.padding.y=350 --class "mini_floatty" -e ~/.config/scripts/wellbeing.sh 
+
 bindsym $mod+e exec $floatty yazi
 bindsym $mod+Shift+b exec $floatty bluetui
 bindsym $mod+Shift+w exec $floatty impala
+bindsym $mod+Shift+t exec $timer_cmd
 
 # Launch the clipboard manager
 bindsym $mod+Ctrl+v exec cliphist list | fuzzel -d -w 90 -l 30 -p "Select an entry to copy it to your clipboard buffer:" | cliphist decode | wl-copy
@@ -37,8 +40,6 @@ bindsym $mod+Ctrl+x exec cliphist list | fuzzel -d -w 90 -l 30 -t cc9393ff -S cc
 # Note: you can clear all cliphist entries by running `cliphist wipe`
 # zoom
 bindsym $mod+z exec  ~/.config/scripts/sway_zoom.sh
-# Focus timer 
-bindsym $mod+Shift+t exec ~/.config/scripts/focus_timer.sh
 # pkill
 bindsym $mod+Shift+d exec ~/.config/scripts/pkill.sh
 # Android emulator
