--- a/sway/dot-config/sway/config.d/auto-start.conf
+++ b/sway/dot-config/sway/config.d/auto-start.conf
@@ -9,9 +9,9 @@ exec hash dbus-update-activation-environment 2>/dev/null && \
      dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP
 
 # Inform swayidle/systemd that the system is idle (starts idle timers)
-exec_always swayidle -w \
-    timeout 300 '~/.config/scripts/swaylock.sh' \
-    # timeout 1200 'systemctl poweroff' \
+exec_always swayidle  \
+    timeout 1200 '~/.config/scripts/swaylock.sh' \
+    timeout 5400 'systemctl poweroff' \
 
 # night light 
 exec sunsetr
