change screenshot and  scratch pad keybinds

--- a/sway/dot-config/sway/config.d/keybinds.conf
+++ b/sway/dot-config/sway/config.d/keybinds.conf
@@ -119,4 +119,4 @@ mode $screenshot {
     $mod+x mode "default"
   }
 }
-bindsym --to-code $mod+s mode $screenshot
+bindsym --to-code $mod+c mode $screenshot
