--- a/sway/dot-config/sway/config
+++ b/sway/dot-config/sway/config
@@ -3,4 +3,7 @@
 # Read `man 5 sway` for a complete reference.
 
 # user config directory
+# TODO: keybinds menu
+#  layout screenshot with 
+#  hide mouse after delay
 include $HOME/.config/sway/config.d/*
