--- a/fuzzel/dot-config/fuzzel/fuzzel.ini
+++ b/fuzzel/dot-config/fuzzel/fuzzel.ini
@@ -1,23 +1,20 @@
 include=~/.config/fuzzel/themes/catppuccin-mocha/green.ini
+[main]
+anchor=center
+line-height=38
+lines=8
+width=40
 font=JetBrainsMono-Regular:size=14
-dpi-aware=no
+dpi-aware=yes
 prompt="Search apps ❯  "
 use-bold=yes
 icons-enabled=yes
 match-counter=no
-show-actions=no
+show-actions=yes
 terminal=alacritty -e
-anchor=center
-lines=16
-width=50
-tabs=4
 horizontal-pad=50
 vertical-pad=18
 inner-pad=30
-image-size-ratio=.55
-exit-on-keyboard-focus-loss=no
 [border]
-width=5
-radius=30
-[key-bindings]
-execute=Return KP_Enter Control+y
+width=4
+radius=20
