--- a/sway/dot-config/sway/config
+++ b/sway/dot-config/sway/config
@@ -3,7 +3,5 @@
 # Read `man 5 sway` for a complete reference.
 
 # user config directory
-# TODO: keybinds menu
-#  layout screenshot with 
-#  hide mouse after delay
+# TODO: layout screenshot with 
 include $HOME/.config/sway/config.d/*
