--- a/sway/dot-config/sway/config.d/input.conf
+++ b/sway/dot-config/sway/config.d/input.conf
@@ -2,6 +2,8 @@
 #
 # Read `man 5 sway-input` for more information about this section.
 
+seat seat0 hide_cursor when-typing enabled
+seat seat0 hide_cursor 5000
 # Touchpad configuration
 input type:touchpad {
     dwt enabled
