--- a/tmux/dot-tmuxp/dots.yaml
+++ b/tmux/dot-tmuxp/dots.yaml
@@ -1,8 +1,8 @@
 session_name: Dotfiles
 suppress_history: true
-start_directory: ${HOME}/dotfiles/
+start_directory: ~/dotfiles/
 windows:
-  - window_name: "dotfiles"
+  - window_name: "src"
     shell_command_before: nvim
     focus: true
   - window_name: "shell"
