--- a/tmux/dot-tmuxp/notes.yaml
+++ b/tmux/dot-tmuxp/notes.yaml
@@ -2,7 +2,7 @@ session_name: Notes
 suppress_history: true
 start_directory: ~/secondBrain/
 windows:
-  - window_name: "notes"
+  - window_name: "src"
     shell_command_before: nvim
     focus: true
   - window_name: "shell"
