--- a/sway/dot-config/sway/config.d/keybinds.conf
+++ b/sway/dot-config/sway/config.d/keybinds.conf
@@ -34,9 +34,9 @@ bindsym $mod+Shift+w exec $floatty impala
 bindsym $mod+Shift+t exec $timer_cmd
 
 # Launch the clipboard manager
-bindsym $mod+Ctrl+v exec cliphist list | fuzzel -d -w 90 -l 30 -p "Select an entry to copy it to your clipboard buffer:" | cliphist decode | wl-copy
+bindsym $mod+v exec cliphist list | fuzzel -d -w 90 -l 5 -p "Select an entry to copy it to your clipboard buffer:" | cliphist decode | wl-copy
 # Delete an entry from the clipboard manager
-bindsym $mod+Ctrl+x exec cliphist list | fuzzel -d -w 90 -l 30 -t cc9393ff -S cc9393ff -p "Select an entry to delete it from cliphist:" | cliphist delete
+bindsym $mod+Shift+x exec cliphist list | fuzzel -d -w 90 -l 5 -t cc9393ff -S cc9393ff -p "Select an entry to delete it from cliphist:" | cliphist delete
 # Note: you can clear all cliphist entries by running `cliphist wipe`
 # zoom
 bindsym $mod+z exec  ~/.config/scripts/sway_zoom.sh
