--- a/sway/dot-config/sway/config.d/application_rules.conf
+++ b/sway/dot-config/sway/config.d/application_rules.conf
@@ -20,7 +20,7 @@ for_window [title="cava_popup"] floating enable, resize set width 70 ppt height 
 for_window [title="waybar_nmtui"] floating enable
 for_window [title="Save File"] floating enable
 for_window [app_id="firefox" title="Firefox — Sharing Indicator"] kill
-for_window [class="Spotify"] floating enable, resize set width 70 ppt height 70 ppt, sticky enable
+for_window [app_id="spotify"] floating enable, resize set width 70 ppt height 70 ppt, sticky enable
 for_window [app_id="firefox"] inhibit_idle fullscreen
 for_window [app_id="Chromium"] inhibit_idle fullscreen
 for_window [class="feh"] floating enable
