--- a/starship/dot-config/starship.toml
+++ b/starship/dot-config/starship.toml
@@ -1,7 +1,7 @@
 "$schema" = 'https://starship.rs/config-schema.json'
 command_timeout = 1000
 add_newline = true
-palette = "catppuccin_latte"
+palette = "catppuccin_frappe"
 format = """
 $directory\
 $git_branch\
