--- a/bat/dot-config/bat/bat.conf
+++ b/bat/dot-config/bat/bat.conf
@@ -1,3 +1,3 @@
 # --theme="TwoDark"
---theme="Catpuccin Latte"
-# --theme="Catpuccin Mocha"
+--theme="Catppuccin Latte"
+# --theme="Catppuccin Mocha"
