theme switcher for waybar , neovim and alacritty

--- a/sway/dot-config/sway/config.d/keybinds.conf
+++ b/sway/dot-config/sway/config.d/keybinds.conf
@@ -40,6 +40,8 @@ bindsym $mod+Shift+x exec cliphist list | fuzzel -d -w 90 -l 5 -t cc9393ff -S cc
 # Note: you can clear all cliphist entries by running `cliphist wipe`
 # zoom
 bindsym $mod+z exec  ~/.config/scripts/sway_zoom.sh
+# theme switcher
+bindsym $mod+Ctrl+t exec ~/.config/scripts/theme_switcher.sh
 # pkill
 bindsym $mod+Shift+d exec ~/.config/scripts/pkill.sh
 # Android emulator
