yazi theme switcher

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ alacritty/dot-config/alacritty/alacritty.toml
 bat/dot-config/bat/bat.conf
 starship/dot-config/starship.toml
 fuzzel/dot-config/fuzzel/fuzzel.ini
+yazi/dot-config/yazi/theme.toml
