change sway client borders colors

--- a/sway/dot-config/sway/config.d/looknfeel.conf
+++ b/sway/dot-config/sway/config.d/looknfeel.conf
@@ -37,8 +37,8 @@ floating_minimum_size 800 x 800
 # Red:       #F38BA8
 
 # class                 border  backgr. text    indicator child_border
-client.focused          #5A9AD6 #1E1E2E #ffffff #89B4FA #6272a4 
-client.focused_inactive #181825 #1E1E2E #89B4FA #181825 #181825
+client.focused          #5A9AD6 #a6e3a1 #11111B #89B4FA #6272a4 
+client.focused_inactive #181825 #1E1E2E #11111B #181825 #181825
 client.unfocused        #11111B #1E1E2E #7A8A99 #11111B #11111B
 client.urgent           #89B4FA #141A20 #ffffff #89B4FA #89B4FA
 client.placeholder      #11111B #1E1E2E #7A8A99 #11111B #11111B
