--- a/setup/Containerfile
+++ b/setup/Containerfile
@@ -19,4 +19,4 @@ USER ${USER}
 
 # Set the working directory
 WORKDIR /home/${USER}
-CMD ["/bin/bash","-c","curl -fsSL https://raw.githubusercontent.com/H-ADJI/dotfiles/refs/heads/master/setup/init.sh | bash ; exec /bin/bash"]
+CMD ["/bin/bash","-c","curl -fsSL https://raw.githubusercontent.com/H-ADJI/dotfiles/refs/heads/master/setup/init.sh | bash ; exec /bin/zsh"]
