ignore taskchamp db

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ venv
 .direnv/
 ssh/.ssh/known*
 ssh/dot-ssh/known*
+task/dot-task/taskchampion*
 assets/dot-config/assets/background
 waybar/dot-config/waybar/theme.css
 nvim/dot-config/nvim/theme
