remove idle shutdown

--- a/sway/dot-config/sway/config.d/auto-start.conf
+++ b/sway/dot-config/sway/config.d/auto-start.conf
@@ -11,7 +11,7 @@ exec hash dbus-update-activation-environment 2>/dev/null && \
 # Inform swayidle/systemd that the system is idle (starts idle timers)
 exec_always swayidle  \
     timeout 1200 '~/.config/scripts/swaylock.sh' \
-    timeout 7200 'systemctl poweroff' \
+    # timeout 7200 'systemctl poweroff' \
 
 # night light 
 exec sunsetr
