--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -21,6 +21,7 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 bind -n M-h previous-window
 bind -n M-l next-window
+bind-key -n M-s copy-mode
 bind C-q kill-session
 unbind q
 bind q kill-window
