--- a/hypr/dot-config/hypr/conf/auto-start.conf
+++ b/hypr/dot-config/hypr/conf/auto-start.conf
@@ -2,13 +2,10 @@
 #################
 ### AUTOSTART ###
 #################
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = hyprpaper
-exec-once = hyprsunset
+exec-once = sunsetr
+exec-once = mako
 exec-once = ~/.config/scripts/blue-speaker.sh
 # gui for apps to request elevated priveleges
 exec-once = systemctl --user start hyprpolkitagent
