--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -5,7 +5,7 @@
 # See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 $terminal = alacritty
-$browser = qutebrowser
+$browser = brave
 $fileManager = ~/.config/scripts/classy_alacritty.sh floatty yazi
 $wifi = ~/.config/scripts/classy_alacritty.sh floatty impala
 $bluetooth = ~/.config/scripts/classy_alacritty.sh floatty bluetui
