--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -11,7 +11,6 @@ $wifi = ~/.config/scripts/classy_alacritty.sh floatty impala
 $bluetooth = ~/.config/scripts/classy_alacritty.sh floatty bluetui
 $menu = fuzzel
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, T, exec, $terminal
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, E, exec, wlogout -b 4 -T 400 -B 400
@@ -20,7 +19,8 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod SHIFT, B, exec, $bluetooth
 bind = $mainMod SHIFT, W, exec, $wifi
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, SPACE, exec, $menu
+bind = $mainMod, SPACE, exec, $terminal
+bind = $mainMod, D, exec, $menu
 bind = $mainMod SHIFT, R, exec, hyprctl reload
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, Z, exec, ~/.config/scripts/zoom.sh
