--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -13,7 +13,7 @@ $menu = fuzzel
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, Q, killactive,
-bind = $mainMod SHIFT, E, exec, wlogout -b 4 -T 400 -B 400
+bind = $mainMod, P, exec, wlogout -b 4 -T 400 -B 400
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod SHIFT, B, exec, $bluetooth
@@ -22,7 +22,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, $terminal
 bind = $mainMod, D, exec, $menu
 bind = $mainMod SHIFT, R, exec, hyprctl reload
-bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod SHIFT, P, pseudo,
 bind = $mainMod, Z, exec, ~/.config/scripts/zoom.sh
 bind = $mainMod, c, exec,~/.config/scripts/screenshot.sh 
 bind = $mainMod SHIFT, l, exec,~/.config/scripts/swaylock.sh 
@@ -44,8 +44,8 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
-bind = $mainMod, j, movefocus, u
-bind = $mainMod, k, movefocus, d
+bind = $mainMod, j, movefocus, d
+bind = $mainMod, k, movefocus, u
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
