--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -1,9 +1,5 @@
-###################
-### KEYBINDINGS ###
-###################
-
 # See https://wiki.hypr.land/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
+$mainMod = SUPER
 $terminal = alacritty
 $browser = brave
 $fileManager = ~/.config/scripts/classy_alacritty.sh floatty yazi
