fix window rules

--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -10,8 +10,8 @@ $menu = fuzzel
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, Q, killactive,
 bind = $mainMod, P, exec, wlogout -b 4 -T 400 -B 400
-bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
+bind = $mainMod SHIFT, E, exec, thunar
 bind = $mainMod SHIFT, B, exec, $bluetooth
 bind = $mainMod SHIFT, W, exec, $wifi
 bind = $mainMod, V, togglefloating,
