--- a/hypr/dot-config/hypr/conf/rules.conf
+++ b/hypr/dot-config/hypr/conf/rules.conf
@@ -1,18 +1,14 @@
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-
-# See https://wiki.hypr.land/Configuring/Window-Rules/ for more
-# See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
-
-# Ignore maximize requests from apps. You'll probably like this.
-# windowrule = suppressevent maximize, class:.*
-
-# Fix some dragging issues with XWayland
-# windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-# windowrule = float, size 70% 70%, class:floatty
-# windowrule = float, size 70% 70%, class:feh
-# windowrule = float, size 90% 90%, class:Alacritty,workspace:1
+windowrule {
+  name = float window
+  match:class = floatty
+  float = on
+  center = on
+  size = 1800 1200
+}
+windowrule {
+  name = float thunar
+  match:class = thunar
+  float = on
+  center = on
+  size = 1800 1200
+}
