--- a/hypr/dot-config/hypr/conf/auto-start.conf
+++ b/hypr/dot-config/hypr/conf/auto-start.conf
@@ -3,12 +3,14 @@
 ### AUTOSTART ###
 #################
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = systemctl --user start hyprpolkitagent
 exec-once = hyprpaper
 exec-once = sunsetr
 exec-once = mako
 exec-once = ~/.config/scripts/blue-speaker.sh
-# gui for apps to request elevated priveleges
-exec-once = systemctl --user start hyprpolkitagent
-# exec-once = hyprpm reload -n
 execr = pkill waybar; waybar
-
+# cliphist
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
+exec-once = nm-applet --indicator
+exec-once = ~/.config/scripts/blue-speaker.sh
