--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -1,20 +1,21 @@
 # See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER
 $terminal = alacritty
-$browser = brave
+$browser = brave --ozone-platform=wayland --ozone-platform-hint=wayland 
 $fileManager = ~/.config/scripts/classy_alacritty.sh floatty yazi
 $wifi = ~/.config/scripts/classy_alacritty.sh floatty impala
 $bluetooth = ~/.config/scripts/classy_alacritty.sh floatty bluetui
+$wlogout = wlogout -b 4 -T 400 -B 400
 $menu = fuzzel
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, Q, killactive,
-bind = $mainMod, P, exec, wlogout -b 4 -T 400 -B 400
+bind = $mainMod, P, exec, $wlogout
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod SHIFT, E, exec, thunar
 bind = $mainMod SHIFT, B, exec, $bluetooth
 bind = $mainMod SHIFT, W, exec, $wifi
-bind = $mainMod, V, togglefloating,
+bind = $mainMod SHIFT, F, togglefloating,
 bind = $mainMod, SPACE, exec, $terminal
 bind = $mainMod, D, exec, $menu
 bind = $mainMod SHIFT, R, exec, hyprctl reload
@@ -29,13 +30,9 @@ bind = $mainMod, n, cyclenext
 bind = SUPER SHIFT, N, exec, makoctl dismiss --all
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-# # Launch the clipboard manager
-# bindsym $mod+Ctrl+v exec cliphist list | fuzzel -d -w 90 -l 30 -p "Select an entry to copy it to your clipboard buffer:" | cliphist decode | wl-copy
-# # Delete an entry from the clipboard manager
-# bindsym $mod+Ctrl+x exec cliphist list | fuzzel -d -w 90 -l 30 -t cc9393ff -S cc9393ff -p "Select an entry to delete it from cliphist:" | cliphist delete
-# # Note: you can clear all cliphist entries by running `cliphist wipe`
-# keyboard layout
-# bindsym $mod+x exec ~/.config/sway/scripts/layout.sh
+bind = $mainMod, V, exec, cliphist list | fuzzel -d -w 90 -l 5 -p "Select an entry to copy it to your clipboard buffer:" | cliphist decode | wl-copy
+bind = $mainMod, X, exec, cliphist list | fuzzel -d -w 90 -l 5 -t cc9393ff -S cc9393ff -p "Select an entry to delete it from cliphist:" | cliphist delete
+bind = $mainMod SHIFT, X, exec, ~/.config/scripts/layout.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
