--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -26,7 +26,7 @@ bind = $mainMod SHIFT, l, exec,~/.config/scripts/swaylock.sh
 bind = $mainMod SHIFT, A, exec,~/.config/scripts/emulator.sh
 bind = $mainMod SHIFT, SPACE, exec,~/.config/scripts/pkill.sh
 bind = $mainMod, f, fullscreen
-bind = $mainMod, n, cyclenext
+bind = $mainMod, TAB, cyclenext
 bind = SUPER SHIFT, N, exec, makoctl dismiss --all
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
