--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -7,6 +7,7 @@ $wifi = ~/.config/scripts/classy_alacritty.sh floatty impala
 $bluetooth = ~/.config/scripts/classy_alacritty.sh floatty bluetui
 $wlogout = wlogout -b 4 -T 400 -B 400
 $menu = fuzzel
+$screen = ~/.config/scripts/hypr_screen.sh
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, Q, killactive,
@@ -21,10 +22,11 @@ bind = $mainMod, D, exec, $menu
 bind = $mainMod SHIFT, R, exec, hyprctl reload
 bind = $mainMod SHIFT, P, pseudo,
 bind = $mainMod, Z, exec, ~/.config/scripts/zoom.sh
-bind = $mainMod, c, exec,~/.config/scripts/screenshot.sh 
-bind = $mainMod SHIFT, l, exec,~/.config/scripts/swaylock.sh 
-bind = $mainMod SHIFT, A, exec,~/.config/scripts/emulator.sh
-bind = $mainMod SHIFT, SPACE, exec,~/.config/scripts/pkill.sh
+bind = $mainMod, C, exec, $screen region
+bind = $mainMod SHIFT, C, exec, $screen display
+bind = $mainMod SHIFT, l, exec, ~/.config/scripts/swaylock.sh 
+bind = $mainMod SHIFT, A, exec, ~/.config/scripts/emulator.sh
+bind = $mainMod SHIFT, D, exec, ~/.config/scripts/pkill.sh
 bind = $mainMod, f, fullscreen
 bind = $mainMod, TAB, cyclenext
 bind = SUPER SHIFT, N, exec, makoctl dismiss --all
