--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -21,7 +21,7 @@ bind = $mainMod, SPACE, exec, $terminal
 bind = $mainMod, D, exec, $menu
 bind = $mainMod SHIFT, R, exec, hyprctl reload
 bind = $mainMod SHIFT, P, pseudo,
-bind = $mainMod, Z, exec, ~/.config/scripts/zoom.sh
+bind = $mainMod, Z, exec, ~/.config/scripts/hypr_zoom.sh
 bind = $mainMod, C, exec, $screen region
 bind = $mainMod SHIFT, C, exec, $screen display
 bind = $mainMod SHIFT, l, exec, ~/.config/scripts/swaylock.sh 
