--- a/hypr/dot-config/hypr/conf/auto-start.conf
+++ b/hypr/dot-config/hypr/conf/auto-start.conf
@@ -4,6 +4,7 @@
 #################
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user start hyprpolkitagent
+exec-once = hyprpaper
 exec-once = sunsetr
 exec-once = mako
 exec-once = ~/.config/scripts/blue-speaker.sh
