--- a/hypr/dot-config/hypr/conf/auto-start.conf
+++ b/hypr/dot-config/hypr/conf/auto-start.conf
@@ -4,11 +4,10 @@
 #################
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user start hyprpolkitagent
-exec-once = hyprpaper
+exec-once = hyprpaper && hyprctl hyprpaper wallpaper ', ~/.config/assets/background.png, '
 exec-once = sunsetr
 exec-once = mako
 exec-once = ~/.config/scripts/blue-speaker.sh
-exec-once = hyprctl hyprpaper wallpaper ', ~/.config/assets/background.png, '
 execr = pkill waybar; waybar
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
