--- a/hypr/dot-config/hypr/conf/auto-start.conf
+++ b/hypr/dot-config/hypr/conf/auto-start.conf
@@ -1,12 +1,11 @@
-
 #################
 ### AUTOSTART ###
 #################
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user start hyprpolkitagent
-exec-once = hyprpaper && hyprctl hyprpaper wallpaper ', ~/.config/assets/background.png, '
 exec-once = sunsetr
 exec-once = mako
+exec-once = hyprpaper 
 exec-once = ~/.config/scripts/blue-speaker.sh
 execr = pkill waybar; waybar
 exec-once = wl-paste --type text --watch cliphist store
